--- a/style.css
+++ b/style.css
@@ -60,11 +60,13 @@ body {
 
 #informations {
     position: absolute;
+    width: 25vw;
     top: 10px;
     bottom: 10px;
     left: 10px;
     z-index: 1000;
     padding: 10px;
+    font-size: 0.5em;
 }
 
 .information {
@@ -74,18 +76,19 @@ body {
 }
 
 #deviceList {
-    max-height: 85vh;
+    height: 75vh;
     overflow-y: auto;
     padding: 0;
     list-style-type: none;
+    font-size: 0.5em;
 }
 
     #deviceList li {
         background: rgba(255, 255, 255, 0.9);
-        font-size: 12px;
         margin: 10px 0 10px 0;
         padding: 0 10px 0 10px;
         border: 1px solid #ddd;
+        font-size: 1em;
     }
 
         #deviceList li.selected {
@@ -93,7 +96,7 @@ body {
         }
 
 .definition-list {
-    font-size: 10px;
+    font-size: 6px;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -105,7 +108,6 @@ body {
     }
 
     .definition-list dd {
-        font-size: 1em;
         margin-bottom: 5px;
         margin-left: 0;
         padding-left: 20px;
@@ -113,14 +115,15 @@ body {
 
 .popup {
     position: absolute;
-    bottom: 10px;
-    right: 10px;
-    min-width: 300px;
+    bottom: 5px;
+    right: 5px;
+    width: 25vw;
     background: rgba(255, 255, 255, 0.9);
-    padding: 20px;
+    padding: 10px;
     border-radius: 10px;
-    display: none;
     z-index: 1001;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+    font-size: 0.1em;
 }
 
     .popup h2 {
@@ -134,12 +137,12 @@ body {
 button {
     display: inline-block;
     width: 100%;
-    padding: 10px 20px;
+    padding: 10px 10px;
     border-radius: 10px;
     border: none;
     text-align: center;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 0.1em;
     cursor: pointer
 }
 
