--- a/style.css
+++ b/style.css
@@ -44,24 +44,27 @@ body {
     }
 
 .player-icon {
-    width: 100%;
-    height: 100%;
+    width: 110%;
+    height: 110%;
+    position: relative;
 }
 
 .player-number {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 175%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     color: white;
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(255, 0, 0, 1);
     border-radius: 50%;
-    width: 20px;
-    height: 20px;
+    width: 13px;
+    height: 13px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 10px;
+    font-size: 8px;
     font-weight: bold;
+    z-index: 1;
 }
 
 #informations {
