--- a/style.css
+++ b/style.css
@@ -44,27 +44,24 @@ body {
     }
 
 .player-icon {
-    width: 110%;
-    height: 110%;
-    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 .player-number {
     position: absolute;
-    top: 175%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
     color: white;
-    background-color: rgba(255, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 0.0);
     border-radius: 50%;
-    width: 13px;
-    height: 13px;
+    width: 20px;
+    height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 8px;
+    font-size: 10px;
     font-weight: bold;
-    z-index: 1;
 }
 
 #informations {
